tests/ui/missing/missing-items/missing-type-parameter2.stderr
error[E0425]: cannot find const `N` in this scope
  --> $DIR/missing-type-parameter2.rs:3:8
   |
LL | struct X<const N: u8>();
   |          ----------- corresponding const parameter on the type defined here
LL |
LL | impl X<N> {}
   |        ^ not found in this scope
   |
help: you might have meant to introduce a const parameter `N` on the impl
   |
LL | impl<const N: u8> X<N> {}
   |     +++++++++++++

error[E0425]: cannot find const `N` in this scope
  --> $DIR/missing-type-parameter2.rs:6:28
   |
LL | struct X<const N: u8>();
   |          ----------- corresponding const parameter on the type defined here
...
LL | impl<T, const A: u8 = 2> X<N> {}
   |                            ^ not found in this scope
   |
help: you might have meant to introduce a const parameter `N` on the impl
   |
LL | impl<T, const A: u8 = 2, const N: u8> X<N> {}
   |                        +++++++++++++

error[E0425]: cannot find type `T` in this scope
  --> $DIR/missing-type-parameter2.rs:11:20
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
...
LL | fn foo(_: T) where T: Send {}
   |                    ^
   |
help: a struct with a similar name exists
   |
LL - fn foo(_: T) where T: Send {}
LL + fn foo(_: T) where X: Send {}
   |
help: you might be missing a type parameter
   |
LL | fn foo<T>(_: T) where T: Send {}
   |       +++

error[E0425]: cannot find type `T` in this scope
  --> $DIR/missing-type-parameter2.rs:11:11
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
...
LL | fn foo(_: T) where T: Send {}
   |           ^
   |
help: a struct with a similar name exists
   |
LL - fn foo(_: T) where T: Send {}
LL + fn foo(_: X) where T: Send {}
   |
help: you might be missing a type parameter
   |
LL | fn foo<T>(_: T) where T: Send {}
   |       +++

error[E0425]: cannot find type `A` in this scope
  --> $DIR/missing-type-parameter2.rs:15:24
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
...
LL | fn bar<const N: u8>(_: A) {}
   |                        ^
   |
help: a struct with a similar name exists
   |
LL - fn bar<const N: u8>(_: A) {}
LL + fn bar<const N: u8>(_: X) {}
   |
help: you might be missing a type parameter
   |
LL | fn bar<const N: u8, A>(_: A) {}
   |                   +++

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/missing-type-parameter2.rs:3:8
   |
LL | impl X<N> {}
   |        ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL | impl X<{ N }> {}
   |        +   +

error: defaults for generic parameters are not allowed here
  --> $DIR/missing-type-parameter2.rs:6:9
   |
LL | impl<T, const A: u8 = 2> X<N> {}
   |         ^^^^^^^^^^^^^^^

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/missing-type-parameter2.rs:6:28
   |
LL | impl<T, const A: u8 = 2> X<N> {}
   |                            ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL | impl<T, const A: u8 = 2> X<{ N }> {}
   |                            +   +

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0425, E0747.
For more information about an error, try `rustc --explain E0425`.
